encryption password and verify
