# src/models/loginDto.ts
@@ -4,6 +4,7 @@ export default class LoginDto{
     public userId?: string;
     public username?: string;
     public role?: string;
+    public password?: string;
     public jwt?: string;
 
     constructor() {
